examples/test/testpolicy3740.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3740
  namespace: namespace6
spec:
  podSelector:
    matchLabels:
      key11: value43
      key15: value31
      key43: value6
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key7: value31
          key23: value28
      podSelector:
        matchLabels:
          key16: value18
